# agent-flight-recorder

./: .dockerignore  .gitignore  AGENTS.md  CODEX_REVIEW.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  NOTICE  OPEN_SOURCE_FREEZE.md  README.md  SECURITY.md  SUBMISSION_NOTES.md  docker-compose.yml  repo-map.md  review-gate.md
.github/: FREEZE_REF.txt
Codex-AFR/: README.md  afr-add-codex-output  afr-package-latest-codex  codexafr  codexafr-api-proxy  codexafr-harness  codexafr-hook-bridge.py  smoke-codex-package.sh
backend/: pyproject.toml  requirements.txt
backend/app/: __init__.py  __main__.py  auth.py  config.py  license.py  main.py  security.py
backend/app/api/: __init__.py  errors.py  routes_demo.py  routes_events.py  routes_license.py  routes_replay.py  routes_runs.py
backend/app/engine/: __init__.py  checkpoints.py  demo.py  events.py  forks.py  runs.py  state.py
backend/app/mcp/: __init__.py  router.py  server.py  tools.py
backend/app/redaction/: __init__.py  default.py  hooks.py
backend/app/replay/: contract.py  policies.py  service.py
backend/app/schemas/: __init__.py  models.py
backend/app/storage/: __init__.py  db.py  repo.py
backend/tests/: conftest.py  test_api.py  test_auth.py  test_cli_friendly_commands.py  test_cli_regression_case.py  test_demo_seed.py  test_dependency_integrity.py  test_doctor.py  test_fork.py  test_langchain_adapter.py  test_license_and_tags.py  test_mcp_stub.py  test_redaction.py  test_replay_controls.py  test_replay_helper.py  test_replay_policies.py  test_sdk_replay_controls.py  test_state_reconstruction.py
cli/: pyproject.toml
cli/afr_cli/: __init__.py  main.py  regression_case.py
docs/: agent-wrapper-smoke-matrix.md  api.md  claim-contract.md  cli.md  data-model.md  data-retention.md  dependency-integrity.md  docker.md  evals.md  features.md  frontend-boundary.md  integrations.md  kimi-smoke.md  mcp.md  premium.md  quickstart.md  replay.md  repository-hygiene.md  roadmap.md  sdk.md
evals/: README.md  afr_sanity_eval.jsonl
receipts/: agent-ready-repo-pack-proof-2026-06-23.md
scripts/: afr-add-kimi-output  afr-kimi  afr-kimi-harness  afr-package-latest-kimi  smoke.py  (+3 more)
(+41 files in other folders)
