[project]
name = "afr-backend"
version = "0.2.0"
description = "Agent Flight Recorder backend — AI agent observability, replay debugging, and checkpoint inspection for LLM apps"
requires-python = ">=3.10"
# Runtime dependencies. Exact pins for reproducible installs are maintained in
# backend/requirements.txt; see docs/dependency-integrity.md for the strategy.
dependencies = [
    "fastapi>=0.110,<1.0",
    "uvicorn>=0.29,<1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "httpx>=0.27",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
