[project]
name = "afr-cli"
version = "0.2.0"
description = "Agent Flight Recorder CLI"
requires-python = ">=3.10"
dependencies = [
    "afr-sdk",
]

[project.scripts]
afr = "afr_cli.main:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["afr_cli*"]
